2009-11-05  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (dll_suffixes): Disable.  Explain why.
	(perhaps_suffix): Use stat_suffixes instead of dll_suffixes.

2009-11-03  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Re-introduce setting the SE_DACL_PROTECTED
	flag.  Remove INHERITED_ACE flag from all inherited ACEs.  Add comment.
	Fix ace_off counter in unrelated ACE loop.
	* wincap.cc: Re-add has_dacl_protect throughout.
	* wincap.h: Ditto.

2009-11-02  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Re-enable generating default permission
	entries for directories.

2009-11-02  Corinna Vinschen  <corinna@vinschen.de>

	* dlfcn.cc (get_full_path_of_dll): Drop enforcing a .dll suffix.
	(dlopen): If last path component has no dot, append one to override
	automatic .dll suffix in LoadLibrary.

2009-11-02  Corinna Vinschen  <corinna@vinschen.de>

	* miscfuncs.h (transform_chars): Declare.  Define inline variation here.
	* mount.cc (mount_info::from_fstab): Remove extern declaration of
	transform_chars.
	* path.cc (tfx_chars): Move to strfuncs.cc.
	(transform_chars): Ditto.
	* strfunc.cc (tfx_chars): Moved here from path.cc.
	(transform_chars): Ditto.
	(sys_cp_wcstombs): Make UNICODE private use area conversion roundtrip
	save for all characters.
	(sys_cp_mbstowcs): Ditto, by removing special case for UTF-8 sequences
	representing U+F0xx UNICODE chars.  Fix typo in comment.

2009-11-02  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (tfx_chars): Constify.

2009-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* cygprops.h: New file.
	* dtable.cc (handle_to_fn): Add check for correct installation_key
	string in object name for pipes and ttys.
	* external.cc (cygwin_internal): Add CW_GET_INSTKEY to allow fetching
	the installation_key from cygserver.
	* fhandler_fifo.cc (fhandler_fifo::fifo_name): Add installation_key
	to fifo name.
	* globals.cc: Include cygprops.h.
	(_RDATA): Move slightly and add comment.